# typinggame

./: download_font.py  graphics.py  main.py  pyproject.toml  romaji_input.py  sounds.py  stages.py  test_setup.py
.claude/: settings.local.json
